# distributed-qem-simplification

./: .gitignore  .gitmodules  CMakeLists.txt  commands.sh  perf.data
examples/: octree.cpp  octree_impl.cpp  partitions.cpp  partitions_omp1.cpp  partitions_omp2.cpp  partitions_seq.cpp  qem_omp.cpp  qem_seq.cpp  sequential_impl.cpp  uniform_grid_impl.cpp
include/: octree.hpp  qem_mesh.hpp  qem_simp.hpp  uniform_grid.hpp
src/: format_utils.hpp  mesh.h  octree.cpp  octree.hpp  qem_mesh.hpp  qem_omp.cpp  qem_seq.cpp  qem_simp.cpp  qem_utils.hpp  uniform_grid.cpp  uniform_grid.hpp
src/utils/: massert.h
